include_directories(${OPENGL_INCLUDE_DIR})
include_directories(${GLEW_INCLUDE_DIR})
include_directories(${SDL_INCLUDE_DIR})
include_directories(${SDL_IMAGE_INCLUDE_DIR})
include_directories(${SDL_TTF_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR})

add_library(tinygame
            math/vec.cpp
            img/image.cpp
            img/io/image.cpp
            mesh/staticmesh.cpp
            mesh/io/staticmesh.cpp
            draw/glcheck.cpp
            draw/buffer.cpp
            draw/uniformmap.cpp
            draw/renderable.cpp
            draw/renderer.cpp
            draw/shader.cpp
            draw/shaderprogram.cpp
            draw/texture.cpp
            draw/vertexbufferinterpreter.cpp
            draw/computetexture.cpp
            draw/screensquare.cpp
            draw/worldrenderer.cpp
            draw/worldeffectrenderer.cpp
            draw/staticmesh.cpp
            draw/icontexture2d.cpp
            os/application.cpp
            os/sdlapplication.cpp)

