include_directories(${OPENGL_INCLUDE_DIR})
include_directories(${GLEW_INCLUDE_DIR})
include_directories(${ASSIMP_INCLUDE_DIR})
include_directories(${SDL_INCLUDE_DIR})
include_directories(${SDL_IMAGE_INCLUDE_DIR})
include_directories(${SDL_TTF_INCLUDE_DIR})
include_directories(${SDL_NET_INCLUDE_DIR})
include_directories(${SDL_MIXER_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR})

add_library(tinygame
            math/vec.cpp
            hash/md5.cpp
            net/message.cpp
            net/host.cpp
            net/client.cpp
            net/console.cpp
            img/image.cpp
            img/io/image.cpp
            smp/sample.cpp
            smp/io/sample.cpp
            snd/alcheck.cpp
            snd/buffer.cpp
            snd/source.cpp
            snd/worldsounderer.cpp
            lod/quadtree.cpp
            mesh/staticmesh.cpp
            mesh/animatedmesh.cpp
            mesh/io/staticmesh.cpp
            mesh/io/animatedmesh.cpp
            draw/glcheck.cpp
            draw/buffer.cpp
            draw/uniformmap.cpp
            draw/renderable.cpp
            draw/renderer.cpp
            draw/shader.cpp
            draw/shaderprogram.cpp
            draw/texture.cpp
            draw/computetexture.cpp
            draw/screensquare.cpp
            draw/rendererwithcamera.cpp
            draw/worldrenderer.cpp
            draw/detail/worldrenderer.cpp
            draw/staticmesh.cpp
            draw/staticmeshhorde.cpp
            draw/animatedmesh.cpp
            draw/animatedmeshhorde.cpp
            draw/icontexture2d.cpp
            draw/iconhorde.cpp
            draw/lighthorde.cpp
            draw/terrain.cpp
            draw/effects/diffuse.cpp
            draw/effects/normals.cpp
            draw/effects/lambert.cpp
            draw/effects/sunsky.cpp
            draw/effects/solid.cpp
            draw/effects/showimage.cpp
            os/application.cpp
            os/sdlapplication.cpp)

